--- a/themes/ubuconasia/layouts/index.html
+++ b/themes/ubuconasia/layouts/index.html
@@ -23,7 +23,7 @@
         <a href="call-for-proposals"><button>{{ i18n "submit_proposal" }}</button></a>
       </div>
       <div class="col-4 u-hide--small u-align--center">
-        <img src='{{ "/images/uca22logo_orange.svg" | relURL }}' alt="">
+        <img src='{{ "/images/uca23.png" | relURL }}' alt="">
       </div>
     </div>
   </section>
