import css from remote

--- a/themes/ubuconasia/layouts/partials/head.html
+++ b/themes/ubuconasia/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href='{{ "/css/vanilla.css" | relURL }}' />
+    <link rel="stylesheet" href='https://assets.ubuntu.com/v1/vanilla-framework-version-3.14.0.min.css' />
     <link rel="stylesheet" href='{{ "/css/ubuconasia.css" | relURL }}' />
     <link rel="apple-touch-icon" sizes="180x180" href='{{ "/images/favicon/apple-touch-icon.png" | relURL }}'>
     <link rel="icon" type="image/png" sizes="32x32" href='{{ "/images/favicon/favicon-32x32.png" | relURL }}'>
