--- a/themes/ubuconasia/layouts/partials/header.html
+++ b/themes/ubuconasia/layouts/partials/header.html
@@ -5,7 +5,7 @@
     <div class="p-navigation__banner">
       <div class="p-navigation__logo">
         <a class="p-navigation__link" href="{{ .Site.LanguagePrefix | relURL }}" style="padding: 12px;">
-          <img class="p-navigation__image" src='{{ "/images/uca22logo_orange.svg" | relURL }}' alt="">
+          <img class="p-navigation__image" src='{{ "/images/uca23header.png" | relURL }}' alt="">
           <!-- <span class="p-navigation__logo-title">{{.Site.Title}}</span> -->
         </a>
       </div>
