--- a/themes/ubuconasia/layouts/partials/head.html
+++ b/themes/ubuconasia/layouts/partials/head.html
@@ -3,9 +3,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href='https://assets.ubuntu.com/v1/vanilla-framework-version-3.14.0.min.css' />
     <link rel="stylesheet" href='{{ "/css/ubuconasia.css" | relURL }}' />
+
+    
     <link rel="apple-touch-icon" sizes="180x180" href='{{ "/images/favicon/apple-touch-icon.png" | relURL }}'>
     <link rel="icon" type="image/png" sizes="32x32" href='{{ "/images/favicon/favicon-32x32.png" | relURL }}'>
     <link rel="icon" type="image/png" sizes="16x16" href='{{ "/images/favicon/favicon-16x16.png" | relURL }}'>
+
+    <link rel="apple-touch-icon" sizes="57x57" href='{{ "/images/favicon/apple-icon-57x57.png" | relURL }}'>
+    <link rel="apple-touch-icon" sizes="60x60" href='{{ "/images/favicon/apple-icon-60x60.png" | relURL }}'>
+    <link rel="apple-touch-icon" sizes="72x72" href='{{ "/images/favicon/apple-icon-72x72.png" | relURL }}'>
+    <link rel="apple-touch-icon" sizes="76x76" href='{{ "/images/favicon/apple-icon-76x76.png" | relURL }}'>
+    <link rel="apple-touch-icon" sizes="114x114" href='{{ "/images/favicon/apple-icon-114x114.png" | relURL }}'>
+    <link rel="apple-touch-icon" sizes="120x120" href='{{ "/images/favicon/apple-icon-120x120.png" | relURL }}'>
+    <link rel="apple-touch-icon" sizes="144x144" href='{{ "/images/favicon/apple-icon-144x144.png" | relURL }}'>
+    <link rel="apple-touch-icon" sizes="152x152" href='{{ "/images/favicon/apple-icon-152x152.png" | relURL }}'>
+    <link rel="apple-touch-icon" sizes="180x180" href='{{ "/images/favicon/apple-icon-180x180.png" | relURL }}'>
+    <link rel="icon" type="image/png" sizes="192x192"  href='{{ "/images/favicon/android-icon-192x192.png" | relURL }}'>
+    <link rel="icon" type="image/png" sizes="32x32" href='{{ "/images/favicon/favicon-32x32.png" | relURL }}'>
+    <link rel="icon" type="image/png" sizes="96x96" href='{{ "/images/favicon/favicon-96x96.png" | relURL }}'>
+    <link rel="icon" type="image/png" sizes="16x16" href='{{ "/images/favicon/favicon-16x16.png" | relURL }}'>
+    <link rel="manifest" href='{{ "/images/favicon/manifest.json" | relURL }}'>
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content='{{ "/images/favicon/ms-icon-144x144.png" | relURL }}'>
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Title Meta -->
     <title itemprop="name">{{ .Title }} | {{ .Site.Title }}</title>
