--- a/themes/ubuconasia/layouts/partials/og_image_layout.html
+++ b/themes/ubuconasia/layouts/partials/og_image_layout.html
@@ -4,5 +4,5 @@
 <meta property="og_image:layout" content="og_image_session.html" />
 {{else}}
 <meta property="og_image:layout" content="og_image.html" />
-<meta property="og_image:event_logo_path" content='{{ "/images/uca22logo_orange.svg" | relURL }}' />
+<meta property="og_image:event_logo_path" content='{{ "/images/uca23.png" | relURL }}' />
 {{end}}
