Fix redirect logic

--- a/themes/ubuconasia/layouts/partials/head.html
+++ b/themes/ubuconasia/layouts/partials/head.html
@@ -73,7 +73,7 @@
     <!-- Redirect to external website -->
     {{ if .Params.externalRedirect }}
     <script>
-        window.href = "{{.Params.externalRedirect}}";
+        window.location = "{{.Params.externalRedirect}}";
     </script>
     {{ end }}
 
