--- a/themes/ubuconasia/layouts/index.html
+++ b/themes/ubuconasia/layouts/index.html
@@ -17,7 +17,7 @@
         <h1>{{.Title}}</h1>
         <h4>{{.Site.Params.descriptionOnHomepage}}</h4>
         <p>{{.Site.Params.period}}</p>
-        <a href="https://events.canonical.com/event/13/abstracts/"><button>{{ i18n "submit_proposal" }}</button></a>
+        <a href="cfp"><button>{{ i18n "submit_proposal" }}</button></a>
       </div>
       <div class="col-4 u-hide--small u-align--center">
         <img src='{{ "/images/uca23.png" | relURL }}' alt="">
