--- a/themes/ubuconasia/layouts/index.html
+++ b/themes/ubuconasia/layouts/index.html
@@ -20,7 +20,7 @@
         <a href="cfp"><button>{{ i18n "submit_proposal" }}</button></a>
       </div>
       <div class="col-4 u-hide--small u-align--center">
-        <img src='{{ "/images/uca23.png" | relURL }}' alt="">
+        <img src='{{ "/images/uca23.svg" | relURL }}' alt="">
       </div>
     </div>
   </section>
