--- a/themes/ubuconasia/layouts/partials/session_og_image_meta.html
+++ b/themes/ubuconasia/layouts/partials/session_og_image_meta.html
@@ -16,5 +16,5 @@
 <meta property="og_image:speaker_names" content="{{ $speaker_names }}" />
 <meta property="og_image:session_title" content="{{ .Page.Title }}" />
 <meta property="og_image:event_name" content="{{ .Site.Title }}" />
-<meta property="og_image:event_logo_path" content='{{ "/images/uca22logo_white.svg" | relURL }}' />
+<meta property="og_image:event_logo_path" content='{{ "/images/uca23.svg" | relURL }}' />
 {{ end }}
