--- a/themes/ubuconasia/layouts/partials/sponsor_og_image_meta.html
+++ b/themes/ubuconasia/layouts/partials/sponsor_og_image_meta.html
@@ -20,5 +20,5 @@
 <meta property="og_image:sponsor_class" content="{{ $sponsor_class }}" />
 <meta property="og_image:event_name" content="{{ .Site.Title }}" />
 <meta property="og_image:sponsor_logo_path" content="{{ .Permalink | relURL }}{{ .Params.photo }}" />
-<meta property="og_image:event_logo_path" content='{{ "/images/uca22logo_orange.svg" | relURL }}' />
+<meta property="og_image:event_logo_path" content='{{ "/images/uca23.svg" | relURL }}' />
 {{end}}
