--- a/themes/ubuconasia/layouts/index.html
+++ b/themes/ubuconasia/layouts/index.html
@@ -17,7 +17,8 @@
         <h1>{{.Title}}</h1>
         <h4>{{.Site.Params.descriptionOnHomepage}}</h4>
         <p>{{.Site.Params.period}}</p>
-        <a href="cfp"><button>{{ i18n "submit_proposal" }}</button></a>
+        <a href="https://louca.id"><button>Visit louc.id for event details</button></a>
+        <a href="https://www.youtube.com/playlist?list=PLr8g8zdbZAgGLaaGFwBp4h14THlcu9uAb"><button>Video recordings</button></a>
       </div>
       <div class="col-4 u-hide--small u-align--center">
         <img src='{{ "/images/uca23.svg" | relURL }}' alt="">
